--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <title>Yins Rock Paper Scissors</title>
 </head>
+
 <body>
 
+<header>
+    <h1>Jins<h1>
+    <h1>Rock Paper Scissors</h1>
+</header>
 
+<h2>Challenge Jin</h2>
 
-<script src="assets/js/script.js"></script>
+<div id="fight">
+    <button><a href="game.html"><img src="assets/images/rock.png" alt="Rock"><br>FIGHT!</a></button>
+</div>
 
+<div id="fight">
+   <button><a href="hiscores.html"><img src="assets/images/paper.png" alt="Paper"><br>HI-SCORES</a></button>
+</div>
+
+<script src="assets/js/index.js"></script>
 </body>
