Add rules to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
     <h1>Rock Paper Scissors</h1>
 </header>
 
-<h2>Challenge Jin</h2>
+<h4>Scissors cuts Paper, 
+    Paper covers Rock, 
+    Rock crushes Lizard, 
+    Lizard poisons Spock, 
+    Spock smashes Scissors, 
+    Scissors decapitates Lizard, 
+    Lizard eats Paper, 
+    Paper disproves Spock, 
+    Spock vaporizes Rock, <br>
+    and as it always has, Rock blunts Scissors.<br><br>
+    Click 'FIGHT' to play.
+</h4>
 
 <div id="fight">
     <button><a href="game.html"><img src="assets/images/rock.png" alt="Rock"><br>FIGHT!</a></button>
