--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header>
     <h1>Jins<h1>
-    <h1>Rock Paper Scissors</h1>
+    <h1>Rock Paper Scissors Lizard Spock</h1>
 </header>
 
 <h4>Scissors cuts Paper, 
