--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <h1>Rock Paper Scissors Lizard Spock</h1>
 </header>
 
-<h4>Scissors cuts Paper, 
+<h4>THE RULES<br>
+    Scissors cuts Paper, 
     Paper covers Rock, 
     Rock crushes Lizard, 
     Lizard poisons Spock, 
