--- a/game.html
+++ b/game.html
@@ -50,7 +50,7 @@
         <img src="assets/images/spock.png" alt="Spock"><br><p>SPOCK</p>
         </div>
     
-<p id="action-message">Choose Your Weapon !!!</p>
+<p id="action-message">Choose Your Weapon !!!<br>(Click Rock, Paper Scissors, Lizard or Spock to Select)</p>
 
 </div>
 
