--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
 </header>
 
 <h4>THE RULES<br>
-    Scissors cuts Paper, 
-    Paper covers Rock, 
-    Rock crushes Lizard, 
-    Lizard poisons Spock, 
-    Spock smashes Scissors, 
-    Scissors decapitates Lizard, 
-    Lizard eats Paper, 
-    Paper disproves Spock, 
-    Spock vaporizes Rock, <br>
-    and as it always has, Rock blunts Scissors.<br><br>
-    Click 'FIGHT' to play.
-</h4>
+    Scissors cuts Paper, Paper covers Rock, Rock crushes Lizard, Lizard poisons Spock, Spock smashes Scissors, Scissors decapitates Lizard, Lizard eats Paper, Paper disproves Spock, Spock vaporizes Rock,<br>and as it always has, Rock blunts Scissors.<br><br>Click 'FIGHT' to play.</h4>
 
 <div id="fight">
     <button><a href="game.html"><img src="assets/images/rock.png" alt="Rock"><br>FIGHT!</a></button>
