Fix H1 in index and hiscores htmls

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-    <h1>Jins<h1>
+    <h1>Jins</h1>
     <h1>Rock Paper Scissors Lizard Spock</h1>
 </header>
 
@@ -28,5 +28,4 @@
    <button><a href="hiscores.html"><img src="assets/images/paper.png" alt="Paper"><br>HI-SCORES</a></button>
 </div>
 
-<script src="assets/js/index.js"></script>
 </body>
