--- a/hiscores.html
+++ b/hiscores.html
@@ -26,7 +26,7 @@
       <div class="crawl">
         <div class="title">
           <p>JINS</p>
-          <h1>FINEST WARRIORS</h1>
+          <p>FINEST WARRIORS</p>
         </div>
         
         <p>AJAX 20,000</p>
@@ -48,9 +48,4 @@
     </section>
 
 
-
-</div>
-
-
-<script src="assets/hiscores.js"></script>
 </body>
