Add hiscore id to index.html to remove duplicated id fight

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button><a href="game.html"><img src="assets/images/rock.png" alt="Rock"><br>FIGHT!</a></button>
 </div>
 
-<div id="fight">
+<div id="hiscores">
    <button><a href="hiscores.html"><img src="assets/images/paper.png" alt="Paper"><br>HI-SCORES</a></button>
 </div>
 
