Add h1 to hiscores star-wars section

--- a/hiscores.html
+++ b/hiscores.html
@@ -25,7 +25,7 @@
     <section class="star-wars">
       <div class="crawl">
         <div class="title">
-          <p>JINS</p>
+          <h1>JINS</h1>
           <p>FINEST WARRIORS</p>
         </div>
         
