Add h2 to hiscores star-wars section

--- a/hiscores.html
+++ b/hiscores.html
@@ -26,7 +26,7 @@
       <div class="crawl">
         <div class="title">
           <h1>JINS</h1>
-          <p>FINEST WARRIORS</p>
+          <h2>FINEST WARRIORS</h2>
         </div>
         
         <p>AJAX 20,000</p>
